next/MediaFramework/Interop/S.Abi/include/mfp_plugin.h

/* ------------------------------------------------------------------ status + logging ---------- */

typedef enum MfpStatus {
    MFP_OK              =  0,
    MFP_ERR_UNSUPPORTED = -1,   /* capability/format/operation not provided */
    MFP_ERR_INVALID_ARG = -2,
    MFP_ERR_NOT_FOUND   = -3,   /* e.g. unknown device id */
    MFP_ERR_AGAIN       = -4,   /* no data ready / no room yet (non-blocking) — not an error */
    MFP_ERR_END         = -5,   /* source exhausted */
    MFP_ERR_INTERNAL    = -6,
    MFP_ERR_ABI_MISMATCH = -7
} MfpStatus;
typedef enum MfpLogLevel {
    MFP_LOG_TRACE = 0, MFP_LOG_DEBUG = 1, MFP_LOG_INFO = 2, MFP_LOG_WARN = 3, MFP_LOG_ERROR = 4
} MfpLogLevel;
/* Capability bitset (MfpPluginInfo.capabilities). One plugin may advertise several. */
typedef enum MfpCapability {
    MFP_CAP_AUDIO_BACKEND   = 1u << 0,
    MFP_CAP_VIDEO_SOURCE    = 1u << 1,   /* a media-source provider that opens video */
    MFP_CAP_AUDIO_SOURCE    = 1u << 2,   /* a media-source provider that opens audio */
    MFP_CAP_VIDEO_OUTPUT    = 1u << 3,
    MFP_CAP_LAYER_SURFACE   = 1u << 4,
    MFP_CAP_SUBTITLE        = 1u << 5,
    MFP_CAP_CONTROL_DECODER = 1u << 6
} MfpCapability;
/* ------------------------------------------------------------------ formats ------------------- */

/* Mirrors S.Media.Core.Video.PixelFormat — keep in sync (the managed adapter maps 1:1). GPU-backed
 * frames may report MFP_PF_UNKNOWN and carry a fourcc/dxgi_format in their kind struct. */
typedef enum MfpPixelFormat {
    MFP_PF_UNKNOWN = 0,
    MFP_PF_BGRA32, MFP_PF_RGBA32, MFP_PF_ARGB32, MFP_PF_BGR24, MFP_PF_RGB24,
    MFP_PF_RGBA16, MFP_PF_RGBA16F,
    MFP_PF_I420, MFP_PF_YV12, MFP_PF_NV12, MFP_PF_NV21,
    MFP_PF_YUYV, MFP_PF_UYVY, MFP_PF_YUV422P, MFP_PF_YUV444P, MFP_PF_YUV422P10LE,
    MFP_PF_P010, MFP_PF_P016, MFP_PF_P216, MFP_PF_PA16
} MfpPixelFormat;
typedef struct MfpVideoFormat {
    uint32_t       width;
    uint32_t       height;
    MfpPixelFormat pixel_format;
    uint32_t       fps_num;       /* 0/0 = unspecified / variable */
    uint32_t       fps_den;
} MfpVideoFormat;
typedef struct MfpAudioFormat {
    uint32_t             sample_rate;
    uint32_t             channels;
    MfpAudioSampleFormat sample_format;
} MfpAudioFormat;
/* ----------------------------------------------------- cross-boundary GPU sync (OQ2) ---------- */
/* Negotiated per consumer via capability query; CPU frames use MFP_SYNC_NONE. */
typedef enum MfpSyncKind {
    MFP_SYNC_NONE = 0,            /* CPU frame, or already synchronized */
    MFP_SYNC_KEYED_MUTEX,        /* D3D11 keyed mutex; `value` = key */
    MFP_SYNC_SEMAPHORE_BINARY,   /* binary semaphore (NT handle / fd in `handle`) */
    MFP_SYNC_SEMAPHORE_TIMELINE, /* timeline semaphore; `value` = wait/signal point */
    MFP_SYNC_FENCE               /* fence (sync_file fd / D3D12 fence) */
} MfpSyncKind;
typedef struct MfpSync {
    MfpSyncKind kind;
    uint64_t    handle;          /* OS sync object (NT handle / fd / pointer); 0 if none */
    uint64_t    value;           /* timeline value or keyed-mutex key */
} MfpSync;
/* --------------------------------------------------- frames: tagged union, one per kind (OQ1) -- */
/* One uint64 "gpu handle" is not enough — each backing needs its own fields. These mirror the
 * S.Media.Core HW backings so the managed adapter is a near-direct map. CPU-only plugins use only
 * MFP_FRAME_CPU and may ignore the GPU kinds entirely. */
typedef enum MfpFrameKind {
    MFP_FRAME_CPU = 0,
    MFP_FRAME_DMABUF,            /* Linux  — mirrors Dmabuf{Nv12,P010,P016}Backing */
    MFP_FRAME_D3D11,             /* Windows — mirrors Win32SharedNv12Backing */
    MFP_FRAME_GL_TEXTURE         /* same-GL-context only (layer surfaces); never cross-process */
} MfpFrameKind;
typedef struct MfpCpuFrame {
    void*   planes[4];
    int32_t strides[4];
    int32_t plane_count;
} MfpCpuFrame;
typedef struct MfpDmaBufFrame {
    int32_t  plane_count;
    int32_t  fds[4];             /* dma-buf fds; the host imports, the producer keeps ownership until release */
    int32_t  offsets[4];
    int32_t  strides[4];
    uint64_t drm_modifier;
    uint32_t fourcc;             /* DRM FourCC */
} MfpDmaBufFrame;
typedef struct MfpD3D11Frame {
    uint64_t nt_shared_handle;   /* NT handle to the shared texture */
    uint32_t dxgi_format;
    uint32_t array_slice;        /* 0 for non-array textures */
} MfpD3D11Frame;
typedef struct MfpGlTextureFrame {
    uint32_t texture_id;
    uint32_t target;             /* e.g. GL_TEXTURE_2D */
    uint64_t context_id;         /* must equal the consuming MfpGlContext.context_id */
} MfpGlTextureFrame;
typedef struct MfpVideoFrame {
    /* common header */
    MfpFrameKind   kind;
    uint32_t       width;
    uint32_t       height;
    MfpPixelFormat pixel_format;
    int64_t        pts_ticks;    /* 100-ns ticks */
    MfpSync        sync;         /* GPU kinds only; MFP_SYNC_NONE for CPU */
    void*          opaque;       /* producer cookie, echoed back to its release_frame */
    /* kind-specific payload */
    union {
        MfpCpuFrame       cpu;
        MfpDmaBufFrame    dmabuf;
        MfpD3D11Frame     d3d11;
        MfpGlTextureFrame gl;
    } u;
} MfpVideoFrame;
/* ------------------------------------------------------ host services handed to the plugin ----- */
typedef struct MfpHostApi {
    uint32_t abi_version;
    void    (*log)(MfpLogLevel level, const char* msg);
    void    (*set_last_error)(const char* msg);          /* thread-local; host reads after a negative status */
    int64_t (*now_ticks)(void);                          /* host clock, 100-ns ticks */
    void*   (*alloc_frame)(const MfpVideoFormat* fmt);   /* pooled, host-owned CPU frame buffer */
    void    (*release_frame)(void* frame);
    /* … append-only … */
} MfpHostApi;
/* ==================================================================== capability vtables ====== *
 * Each vtable shadows one managed interface. The first parameter (`self`/`handle`/`src`/`surface`) is
 * the plugin instance the matching add_* / open / create returned. Trailing function pointers marked
 * "optional" may be NULL — the host then uses a fallback. */

/* Audio backend ↔ IAudioBackend. submit/read_into run on the audio clock thread and MUST NOT block. */
typedef struct MfpAudioBackendVTable {
    int   (*enumerate_outputs)(void* self, MfpAudioDeviceInfo* out, int cap, int* count);
    int   (*enumerate_inputs )(void* self, MfpAudioDeviceInfo* out, int cap, int* count);
    void* (*open_output)(void* self, const char* device_id, const MfpAudioFormat* fmt, const MfpAudioOpts* opts);
    void* (*open_input )(void* self, const char* device_id, const MfpAudioFormat* fmt, const MfpAudioOpts* opts);
    int   (*output_submit)(void* handle, const float* interleaved, int float_count);   /* push; MFP_ERR_AGAIN if full */
    int   (*input_read_into)(void* handle, float* dst, int float_count);               /* pull → frames read */
    void  (*close_handle)(void* handle);
    void  (*destroy)(void* self);
    /* --- optional capabilities (NULL if unsupported) --- */
    int64_t (*output_played_frames)(void* handle);    /* total frames physically PLAYED — the master clock
                                                       * (↔ IAudioOutputPlaybackStats.PlayedSamples / IClockedOutput).
                                                       * NULL ⇒ this output cannot be the clock master. */
    int     (*output_writable_frames)(void* handle);  /* room (frames) before output_submit would block, for
                                                       * backpressure (↔ WaitForCapacity). NULL ⇒ assume writable. */
} MfpAudioBackendVTable;
/* A pull audio source instance (e.g. NDI audio, a file's audio track, a synth). */
typedef struct MfpAudioSourceVTable {
    int  (*native_format)(void* src, MfpAudioFormat* out);
    int  (*read_into)(void* src, float* dst, int float_count);    /* → frames read; MFP_ERR_AGAIN / MFP_ERR_END */
    int  (*is_exhausted)(void* src);
    int  (*seek)(void* src, int64_t position_ticks);              /* MFP_ERR_UNSUPPORTED if not seekable */
    void (*destroy)(void* src);
} MfpAudioSourceVTable;
/* A video source instance ↔ IVideoSource. try_read_frame may run on a decode thread. */
typedef struct MfpVideoSourceVTable {
    int  (*native_pixel_formats)(void* src, MfpPixelFormat* out, int cap, int* count);
    int  (*select_output_format)(void* src, MfpPixelFormat chosen);
    int  (*get_format)(void* src, MfpVideoFormat* out);       /* resolved output format (w/h/pixel_format); host queries it before the first read (↔ IVideoSource.Format) */
    int  (*try_read_frame)(void* src, MfpVideoFrame* out);    /* MFP_OK / MFP_ERR_AGAIN / MFP_ERR_END */
    void (*release_frame)(void* src, MfpVideoFrame* frame);   /* return a frame this source produced */
    int  (*is_exhausted)(void* src);
    int  (*seek)(void* src, int64_t position_ticks);          /* MFP_ERR_UNSUPPORTED if not seekable */
    void (*destroy)(void* src);
} MfpVideoSourceVTable;
/* What a provider's open() yields for a URI: a video and/or audio source, both valid only with the
 * provider's matching *_source_vtable. Either may be NULL. A single open() keeps any shared underlying
 * connection (e.g. NDI delivers correlated A/V over ONE receiver — open once, get both). */
typedef struct MfpMediaSource {
    void* video;   /* → MfpVideoSourceVTable instance, or NULL */
    void* audio;   /* → MfpAudioSourceVTable instance, or NULL */
} MfpMediaSource;
/* Media source provider ↔ IMediaDecoderProvider (opens a URI → its sources). Registered with a scheme. */
typedef struct MfpMediaSourceProviderVTable {
    int (*can_open)(void* self, const char* uri);             /* 1 = this provider handles `uri` */
    int (*open)(void* self, const char* uri, MfpMediaSource* out);  /* fills out->video/audio (NULL where N/A) */
    const MfpVideoSourceVTable* video_source_vtable;          /* NULL if this provider never opens video */
    const MfpAudioSourceVTable* audio_source_vtable;          /* NULL if this provider never opens audio */
    void (*destroy)(void* self);
} MfpMediaSourceProviderVTable;
/* Video output ↔ IVideoOutput. submit() runs on the clock/compositor thread; return promptly. */
typedef struct MfpVideoOutputVTable {
    int  (*accepted_pixel_formats)(void* self, MfpPixelFormat* out, int cap, int* count);
    int  (*configure)(void* self, const MfpVideoFormat* fmt);
    int  (*submit)(void* self, const MfpVideoFrame* frame);
    void (*destroy)(void* self);
    /* --- optional queue control (↔ IVideoOutputQueueControl); NULL if the output has no internal queue --- */
    void (*abandon_queued)(void* self);                       /* drop queued frames on seek/flush */
    int  (*wait_for_idle)(void* self, int32_t timeout_ms);    /* block until queued frames present; → 1 idle / 0 timeout */
} MfpVideoOutputVTable;
/* Layer-surface FACTORY, registered per `kind` (e.g. "mmd", "shadertoy"). Carries the GL context + target
 * FBO across the boundary so a native plugin renders straight into the canvas. */
typedef struct MfpLayerSurfaceFactoryVTable {
    /* Create a surface instance configured by `config_json` — an opaque, plugin-defined blob taken
     * verbatim from the cue/composition layer spec, e.g. for an "mmd" layer:
     *   {"models":["miku.pmx","stage.pmx"],"motion":"rolling-girl.vmd","camera":"cam.vmd"}
     * The (possibly slow) asset load happens here / in configure_gl — never in render. → instance or NULL. */
    void* (*create)(void* self, const char* config_json);
    const MfpLayerSurfaceVTable* surface_vtable;              /* vtable for instances `create` returns */
    void  (*destroy)(void* self);                            /* destroy the factory itself */
} MfpLayerSurfaceFactoryVTable;
/* Subtitle provider ↔ ISubtitleProvider (opens a sidecar/stream → an overlay source at canvas size). */
typedef struct MfpSubtitleProviderVTable {
    int   (*can_open)(void* self, const char* uri);
    void* (*open)(void* self, const char* uri, uint32_t canvas_w, uint32_t canvas_h);  /* → subtitle instance or NULL */
    const MfpSubtitleVTable* subtitle_vtable;
    void  (*destroy)(void* self);
} MfpSubtitleProviderVTable;
/* Control feedback decoder ↔ IControlFeedbackDecoder — the inbound twin of MeterBlobDecoder, for
 * device-profile entries like "decoder": "x32.meters". Decodes an OSC/MIDI/binary feedback payload
 * into numeric cache readings. (NOTE: this is the only control surface a plugin extends — the OSC/MIDI
 * transport and the Mond engine stay in the framework; a new device = a profile + maybe a decoder.) */
typedef struct MfpControlReading {
    char   address[160];
    double value;
} MfpControlReading;
typedef struct MfpControlDecoderVTable {
    int  (*decode)(void* self,
                   const char* osc_address,
                   const uint8_t* blob, int blob_len,
                   MfpControlReading* out, int out_cap, int* out_count);
    void (*destroy)(void* self);
} MfpControlDecoderVTable;
/* ============================================================== registration + entry point ===== */

/* The host hands this in; the plugin registers each capability through it. `ctx` is opaque host state
 * passed back to every add_*; `self` is the plugin instance forwarded to that capability's vtable calls.
 * Each add_* returns an MfpStatus. */
typedef struct MfpRegistrar {
    uint32_t abi_version;
    void*    ctx;
    int (*add_audio_backend)(void* ctx, const char* id, const MfpAudioBackendVTable* vt, void* self);
    int (*add_media_source_provider)(void* ctx, const char* scheme, const MfpMediaSourceProviderVTable* vt, void* self);
    int (*add_video_output)(void* ctx, const char* id, const MfpVideoOutputVTable* vt, void* self);
    int (*add_layer_surface)(void* ctx, const char* kind, const MfpLayerSurfaceFactoryVTable* vt, void* self);
    int (*add_subtitle_provider)(void* ctx, const char* ext, const MfpSubtitleProviderVTable* vt, void* self);
    int (*add_control_decoder)(void* ctx, const char* id, const MfpControlDecoderVTable* vt, void* self);
    /* … append-only … */
} MfpRegistrar;
typedef struct MfpPluginInfo {
    uint32_t    abi_version;      /* plugin sets = MFP_PLUGIN_ABI_VERSION; host rejects a major mismatch */
    const char* id;               /* e.g. "com.acme.webcam" */
    const char* display_name;
    uint32_t    capabilities;     /* bitset of MfpCapability */
} MfpPluginInfo;